# fastapi_starter

backend/: .gitignore  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: conversation_routes.py  payment_routes.py  user_routes.py
backend/app/core/: config.py
backend/app/db/: cassandra.py  mongo.py
backend/app/models/: coversation.py
backend/app/schema/: user.py
backend/app/services/: auth.py  payment.py
backend/app/static/: success.html
template/: .env.example  pyproject.toml  requirements.txt
template/app/: config.py  main.py
template/app/api/: user.py
template/app/models/: user.py
template/app/schema/: user.py
template/app/services/: auth.py  payment.py  user.py
template/app/static/: cancer.html
